--- a/install
+++ b/install
@@ -1,6 +1,15 @@
 #!/bin/bash
-echo installing
-find ~/.bashrc -maxdepth 0 -empty -exec echo "alias ansshot=\"adb shell screencap -p | perl -pe 's/\x0D\x0A/\x0A/g' > ./ansshot-\`date +%Y%m%d%H%M%S\`.png"\" >> ~/.bashrc \;
-source ~/.bashrc
-echo Completed! Cool, now you can use ansshot command
-done
+if [ -z $(which adb) ]; then
+    echo "Error adb not found, it must be installed and in PATH."
+    exit
+fi
+
+if [ -n "$(find ~/.bashrc -name '.bashrc')" ]
+then
+    echo "alias ansshot=\"adb shell screencap -p > ./ansshot-\`date +%Y%m%d%H%M%S\`.png"\" >> ~/.bashrc
+    source ~/.bashrc
+    echo Completed! Cool, now you can use ansshot command
+else
+    echo "Error .bashrc not found"
+    exit
+fi
